# fastapi-inventory

./: Makefile  inventory.db  pyproject.toml
alembic/: env.py
alembic/versions/: 2f3c30fbc658_init_tables.py  882ff4e71b69_delete_coloumn_sku.py
app/: main.py
app/core/: settings.py
app/models/: database.py  engine.py
app/routers/: category_router.py  product_router.py  stock_movement_router.py
app/schemas/: category.py  product.py  stock_movement.py
