[project]
name = "fastapi-inventory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "ruff>=0.15.0",
    "scalar-fastapi>=1.6.2",
    "sqlmodel>=0.0.33",
    "uvicorn>=0.40.0",
]


[tool.ruff]
line-length = 120


[tool.ruff.lint]
# select = ["E", "F", "W", "I"]
exclude = ["alembic"]
